# magenta-realtime

./: MODEL.md  README.md  pyproject.toml
magenta_rt/: asset.py  fetch_asset.py  musiccoca.py  spectrostream.py  system.py
magenta_rt/colab/: utils.py
notebooks/: Magenta_RT_Demo.ipynb
test/: magenta_rt_end2end_test.py  musiccoca_end2end_test.py  spectrostream_end2end_test.py
